--- a/Kaiserreich Korean Translation/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -2,11 +2,11 @@ l_english:
 
 ### Ideas ###
 BHC_backwards_economy_1:0 "미개발된 경제"
-BHC_backwards_economy_1_desc:0 "The nation is largely agrarian in nature, with many of its agricultural methods long outdated."
+BHC_backwards_economy_1_desc:0 "현재 국가의 농경지 대부분의 농경법이 구식입니다."
 BHC_backwards_economy_2:0 "회복중인 경제"
-BHC_backwards_economy_2_desc:0 "The nation is largely agrarian in nature, with many of its agricultural methods long outdated. Things have slowly started to change, however, with industrialisation becoming more common in urban areas."
+BHC_backwards_economy_2_desc:0 "현재 국가의 농경지 대부분의 농경법이 구식입니다. 그러나 산업화가 도시 지역에서 점점 더 진행되면서 상황이 서서히 변화하기 시작했습니다."
 BHC_divided_government:0 "분열된 정부"
-BHC_divided_government_desc:0 "There are three factions within the Calcutta government: the Maximists, the Moderates, and the Agrarians. Each fought together during the civil war, but each has their own goals and their own vision of what a socialist India will become, even if they are all part of the same government. The in-fighting can, at times, become extreme, and there are worries that the division may eventually lead to open conflict."
+BHC_divided_government_desc:0 "캘커타 정부 내에는 최대주의자, 온건주의자, 농업주의자의 세 파벌이 있습니다. 각각 내전 중에 함께 싸웠으나, 비록 그들이 모두 같은 정부의 일부라 할지라도 사회주의 인도가 어떻게 될 것인가에 대한 각자의 목표와 비전을 가지고  경쟁하고 있습니다. 내분이 때로는 극심해질 수도 있고, 분열이 결국 공개적인 갈등으로 이어질 수도 있다는 우려도 있습니다."
 BHC_army_purged:0 "숙청의 효과"
 BHC_army_loyal:0 "마르크스주의 군대"
 BHC_rouse_the_masses:0 "대중을 깨우다"
@@ -99,8 +99,8 @@ BHC_speech_war:0 "'우리는 패배하지 않을 것이다'"
 BHC_speech_war_desc:0 "The first order of business for Bose will be to address the nation - the Totalists are expected to take a harsh line when it comes to the Commune's advancement over the next several years. To Bose, the Bharatiya Commune has the capability of advancing its own interests and modernising its military, without dependence on outside forces, but only at incredible cost."
 BHC_revoke_landlords:0 "지주제 폐지"
 BHC_revoke_landlords_desc:0 "Not all the landlords common to India before the revolution are gone. Indeed, many of the smaller farms are still held by wealthy members of the upper castes who believe themselves untouchable by the Calcutta government. The Maximists intend to prove to them this is not so, and all of the nation's farmlands must come under a common rule and administration by the people who work on them."
-BHC_nationalize_industry:0 "Organise Vital Industries"
-BHC_nationalize_industry_desc:0 "While most of the nation's vital industries are nationalised, they yet remain in a sorry condition from the devastation of the civil war. The government must concentrate on restoring their productivity and organising their management so as to provide the military the support it desperately needs."
+BHC_nationalize_industry:0 "주요 산업 조직"
+BHC_nationalize_industry_desc:0 "국가의 주요 산업 대부분이 국유화 되어 있지만, 내전의 참화로 인해 여전히 아쉬운 상태에 머물러 있습니다. 정부는 군이 절실히 필요로 하는 지원을 할 수 있도록 생산성을 회복하고 관리를 활성화 하는데 주력해야 합니다."
 BHC_mass_conscription:0 "대중 자극"
 BHC_mass_conscription_desc:0 "The call must go out to the people of the Bharatiya Commune: prepare for war. Each and every man and woman must be ready to fight against the forces of colonialism and oppression, and if the price of that sacrifice is high then it must be gladly paid. India's freedom shall come with the shedding of blood, there is no way around it, but the majority of it shall not be the Commune's."
 BHC_purge_army:0 "숙청 시작"
@@ -123,17 +123,17 @@ BHC_technology_focus:0 "기술 집중"
 BHC_technology_focus_desc:0 "The Moderates say that volume is not as important as quality - the Bharatiya Commune must focus on its technology above all else, making it the equal of the most advanced parts of the western world. It is the only path to victory."
 BHC_arm_soldiers:0 "군대 무장"
 BHC_arm_soldiers_desc:0 "The Commune has a large army, but equipping so many soldiers is a difficult task and one that will require a great deal of coordination and planning."
-BHC_seek_aid:0 "Invite Great Minds from Abroad"
+BHC_seek_aid:0 "해외의 위대한 인물들 초청"
 BHC_seek_aid_desc:0 "We cannot work alone - if we are to achieve true heights of research and technology, we must invite the brightest minds from socialist nations around the world to work closely with our scientists."
-BHC_socialist_1:0 "Mohandas Karamchand Gandhi"
+BHC_socialist_1:0 "모한다스 카람찬드 간디"
 BHC_socialist_1_desc:0 "Mohandas Karamchand Gandhi, leader of the Agrarians faction, has won the appointment as the head of the Calcutta government."
 BHC_speech_peace:0 "'인도의 평화를 위한 길이 있다'"
 BHC_speech_peace_desc:0 "The first order of business with be for Gandhi to address the nation - he is expected to declare that the Bharatiya Commune is not ruled by warlords, but rather by a government that intends to put the people and their freedom above all else. The Mahatma is a revered figure in India, and the people will be elated to hear his words."
 BHC_path_of_defense:0 "방어 중점"
 BHC_path_of_defense_desc:0 "One of the principles of freedom is strength - even with the Agrarians in charge of the Commune, there are yet forces who see only enemies and will not hesitate to strike should they get the chance. The Agrarians will call on the people to resist, to support the government and its efforts with all their strength, and to rest assured that the Mahatma will guide them on the path to peace and freedom."
-BHC_people_first:0 "The People of India First"
+BHC_people_first:0 "인도인이 먼저다"
 BHC_people_first_desc:0 "One of the Agrarians' priorities is to see to the welfare of India's poorest. It will require a sacrifice on the part of the government to see them elevated, but in Gandhi's own words the Commune cannot achieve victory without these desperate souls."
-BHC_home_guard:0 "Create the Home Guard"
+BHC_home_guard:0 "국민 방위대 창설"
 BHC_home_guard_desc:0 "Sadly, peace with the Princely Federation and the Delhi government will never be achieved through words alone. They will not listen to reason. Thus it is necessary to found a new faction within the Commune's army, one that is focused on defence as well as maintaining the peace. If the traitors of the north and west come, they must be met with stern resistance and know that we will take our pound of flesh if we must."
 BHC_approach_enemy:0 "Approach the Enemy in Peace"
 BHC_approach_enemy_desc:0 "It is possible that reunion with the other factions in India could be achieved. Most important is the government in Delhi - if they will listen to the Mahatma's words and agree to a summit, one without their British masters in attendance, then the Princely Federation will follow. Whether such an achievement is even possible remains to be seen."
