--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -955,6 +955,14 @@ amcivwar.312.t:0 "최후 기한이 다가오다"
 amcivwar.312.d:0 "맥아더 장군이 제시한 30일 기한은 거의 끝나가고 있고, 양측 모두 물러나지 않았습니다. 오히려 리드와 롱이 이 30일을 그들이 통제하는 지역 전체에서 민병대를 양성하기 위한 시간으로 사용했다는 것은 분명합니다. 이것은 내전이 정말 어려운 싸움이 될 것임을 의미하는 듯 합니다."
 amcivwar.312.a:0 "이제 무슨 일이 일어날까."
 
+amcivwar.313.t:0 "Contact with the New York Resistance"
+amcivwar.313.d:0 "Though both New York and New Jersey were thought completely lost to Federal forces, it turns out that several large groups of fighters managed to make it out of the urban areas, and have regrouped in the hills of eastern Pennsylvania. Though tattered, they are eager to continue the battle with our support."
+amcivwar.313.a:0 "Good to have you, boys"
+CSA_four_units_newyork:0 "Four militia units arrive in Pennsylvania"
+
+amcivwar.314.t:0 "Order Restored in [restored_core.GetName]"
+amcivwar.314.d:0 "Over the past weeks, [Root.GetAdjective] government forces have been busy in [restored_core.GetName], arresting those we feel would prove a hindrance to our control and helping our local supporters spreading the good word amongst the people. We want to reassure them that, as American citizens, they have no reason to fear our presence. Our efforts have slowly begun to bear fruit, even in the midst of all this chaos."
+amcivwar.314.a:0 "Excellent news!"
 
 ### Deal with the Devil ###
 ACW_deal_with_devil_effect:0 "All occupied states of their territory will be transferred to us, and ours to them. The truce will continue for 90 days, after which each of us will have the option to extend it for another 90 days.\n"
