--- a/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
@@ -211,6 +211,8 @@ annexation_NGF_CONQ:0 "하노버의 운명"
 annexation_NGF_CONQ_desc:0 "The entire Hanoverian region has been brought under our control. Currently our armed forces are facing some opposition from the local populations. We could leave it up to local governments in the region to take care of any dissent."
 annexation_NEP_CONQ:0 "네팔의 운명"
 annexation_NEP_CONQ_desc:0 "After our successful campaign in the Himalayas we now have the task to establish new local administrative authority in order to restore peace in Kathmandu. What shall we do?"
+annexation_NEP_INDIA_CONQ:0 "네팔의 운명"
+annexation_NEP_INDIA_CONQ_desc:0 "After our successful campaign in the Himalayas we now have the task to establish new local administrative authority in order to restore peace in Kathmandu. What shall we do?"
 annexation_NER_CONQ:0 "니제르의 운명"
 annexation_NER_CONQ_desc:0 "Our proud armies have just annexed the former French colony of Niger which is now in need of a proper government, should we establish our administration there or should we let them form a local government?"
 annexation_NGR_CONQ:0 "나이지리아의 운명"
