--- a/Kaiserreich Korean Translation/localisation/KR_Game_Options_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Game_Options_l_english.yml
@@ -1,16 +1,16 @@
-﻿l_english:
+l_english:
 
 ### Game Options ###
-RULE_GROUP_KAISERREICH_RULES:0 "Kaiserreich Rules"
-RULE_MAP_NAMESTYLE:0 "Map Naming & Renaming"
-RULE_OPTION_USE_EXONYM:0 "Use English Exonyms"
-RULE_OPTION_USE_EXONYM_DESC:0 "All states and victory points will use Anglicised names (exonyms), which will not change during the game."
-RULE_OPTION_USE_ENDONYM:0 "Use Native Endonyms"
-RULE_OPTION_USE_ENDONYM_DESC:0 "Many states and victory points use latin-transliterated native names (endonyms), which will be renamed when state ownership changes. Does not apply to multiplayer games."
-RULE_NEWS_EVENTS:0 "News Events"
-RULE_OPTION_NEWS_EVENTS_ALL:0 "Receive All News"
-RULE_OPTION_NEWS_EVENTS_ALL_DESC:0 "All news events will be received, regardless from where they originate."
-RULE_OPTION_NEWS_EVENTS_SOME:0 "Receive Some News"
-RULE_OPTION_NEWS_EVENTS_SOME_DESC:0 "Only receive major world events and news events for your region of the world."
-RULE_OPTION_NEWS_EVENTS_NONE:0 "Receive No News"
-RULE_OPTION_NEWS_EVENTS_NONE_DESC:0 "Very few news events will ever be received."
+RULE_GROUP_KAISERREICH_RULES:0 "카이저라이히 규칙"
+RULE_MAP_NAMESTYLE:0 "지명 방식 & 지명 변경"
+RULE_OPTION_USE_EXONYM:0 "영문독음(미번역)"
+RULE_OPTION_USE_EXONYM_DESC:0 "한글패치를 지원하지 않습니다. 원어독음명이 읽기 힘든분들을 위해 지명이나 도시명이 영어독음으로 표기되며, 지역 소유자가 바뀌어도, 지명이 변경되지 않습니다."
+RULE_OPTION_USE_ENDONYM:0 "원어독음(한글번역)"
+RULE_OPTION_USE_ENDONYM_DESC:0 "한글패치를 지원합니다. 기존 카이저라이히 지명시스템과 같습니다. 지명이나 도시명이 원어독음으로 표기되며, 지역의 소유자에 따라 유동적으로 지명이나 도시명이 변경됩니다."
+RULE_NEWS_EVENTS:0 "뉴스와 사건"
+RULE_OPTION_NEWS_EVENTS_ALL:0 "모든 뉴스 받아보기"
+RULE_OPTION_NEWS_EVENTS_ALL_DESC:0 "위치불문하고 모든 국가들의 사건과 뉴스를 받아보게 될 것입니다."
+RULE_OPTION_NEWS_EVENTS_SOME:0 "일부 뉴스만 받기"
+RULE_OPTION_NEWS_EVENTS_SOME_DESC:0 "강대국 위주의 사건과 뉴스만 받아보게 될 것입니다."
+RULE_OPTION_NEWS_EVENTS_NONE:0 "뉴스 받지 않기"
+RULE_OPTION_NEWS_EVENTS_NONE_DESC:0 "극소수의 뉴스만 받아보게 될겁니다."
