--- a/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
@@ -22,6 +22,27 @@ GRE_paternal_autocrat_party_long:0 "자유 사상가당"
 GRE_national_populist_party:0 "그리스국민연합"
 GRE_national_populist_party_long:0 "그리스국민연합"
 
+GRR_totalist_party:0 "EAM"
+GRR_totalist_party_long:0 "Ethnikó Apeleftherotikó Métopo tis Elládas"
+GRR_syndicalist_party:0 "KEKE"
+GRR_syndicalist_party_long:0 "Kinonikó Ergatikó Kómma tis Elládas"
+GRR_radical_socialist_party:0 "ARM"
+GRR_radical_socialist_party_long:0 "Agrotikó Dimokratikó Métopo"
+GRR_social_democrat_party:0 "EEK"
+GRR_social_democrat_party_long:0 "Ethnikón Enotikón Kómma"
+GRR_social_liberal_party:0 "NFE"
+GRR_social_liberal_party_long:0 "Néa Fileléftheri Énosi"
+GRR_market_liberal_party:0 "FK"
+GRR_market_liberal_party_long:0 "Fileléfthero Kómma"
+GRR_social_conservative_party:0 "LK"
+GRR_social_conservative_party_long:0 "Laïkó Kómma"
+GRR_authoritarian_democrat_party:0 "NK"
+GRR_authoritarian_democrat_party_long:0 "Néo Krátos"
+GRR_paternal_autocrat_party:0 "KTE"
+GRR_paternal_autocrat_party_long:0 "Kómma ton Eleftherofrónon"
+GRR_national_populist_party:0 "EEE"
+GRR_national_populist_party_long:0 "Ethniki Enosi Ellados"
+
 ### Ideas ###
 GRE_legacy_of_alexander_idea:0 "알렉산드로스의 유산"
 GRE_legacy_of_alexander_idea_desc:0 "그리스 시민들은 전쟁에 익숙합니다. 그리고 그 어떠한 것도 그들이 힘들게 이룩한 독립을 다시 뒤집을 수 없을 것입니다."
@@ -714,6 +735,9 @@ gre.159.a:0 "오늘은 슬픈 날이구나."
 gre.160.t:0 "우리는 살아남았다"
 gre.160.d:0 "[GRE.GetNameDefCap]는 더 이상 없습니다. 그리고 우리는 살아남았습니다. 우리가 이겼습니다." 
 gre.160.a:0 "우리는 살아남았다."
+gre.161.t:0 "[GRR.GetNameDef]"
+gre.161.d:0 "The preparations are over. The time has come for us to march against [GRE.GetNameDef]!"
+gre.161.a:0 "Se be it!"
 gre.200.t:0 "Diplomatic Overtures from [GRE.GetNameDef]"
 gre.200.d:0 "While our relations with the Greeks have been cool at best since their rebellion from Turkish rule in the 19th century, today we received several emissaries from [GRE.GetNameDef] who are hopeful to start a new era of peace between our nations - perhaps even going so far as to eventually work out an exchange of land and people, without the need to resort to further war. For today, however, they Greeks are looking for an indication that we might be open to such talks int he future."
 gre.200.a:0 "We welcome better relations with the Greeks"
