--- a/Kaiserreich Korean Translation/localisation/KR_Guatemala_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Guatemala_l_english.yml
@@ -29,25 +29,27 @@ GUA_socialist_compensation_desc:0 "The Socialists within Guatemala have been pro
 GUA_socialist_compensation_2:0 "Socialist Compensation"
 GUA_socialist_compensation_2_desc:0 "The Socialists within Guatemala have been protesting with Mexican funding ever since the Dockyard and Railroad strikes, resulting in the government being forced to compensate the Socialists with empty reforms and changes often."
 
-GUA_united_fruit:0 "United Fruit Company"
+GUA_united_fruit:0 "유나이티드프루트컴퍼니"
 GUA_united_fruit_desc:0 "The United Fruit Company has held a tight grip on Guatemalan politics and economy ever since Cabrera's dictatorship in 1898. While Guatemala has seen significant economic development as a result, it causes the United Fruit Company to hold Guatemala's fate in the balance. It currently controls §Y[?UFC_power]%§! of our land.\n§WThis gives us the following effects:§!\n§WDaily Political Power Gain:§! §R-[?UFC_effect1]§!\n§WConstruction Speed:§! §G+[?UFC_effect2]%§!\n§WConsumer Goods Factories:§! §Y-[?UFC_effect3]%§!\n§WWar Support:§! §R-[?UFC_effect4]%§!"
 
-GUA_united_fruit_start_clone:0 "United Fruit Company"
+CEN_united_fruit_land:0 "유나이티드프루트컴퍼니"
+
+GUA_united_fruit_start_clone:0 "유나이티드프루트컴퍼니"
 GUA_united_fruit_start_clone_desc:0 "The United Fruit Company has held a tight grip on Guatemalan politics and economy ever since Cabrera's dictatorship in 1898. While Guatemala has seen significant economic development as a result, it causes the United Fruit Company to hold Guatemala's fate in the balance. It currently controls §Y50%§! of our land.\n§WThis gives us the following effects:§!\n§WDaily Political Power Gain:§! §R-0.2§!\n§WConstruction Speed:§! §G+15%§!\n§WConsumer Goods Factories:§! §Y-5%§!\n§WWar Support:§! §R-30%§!"
 
-GUA_illiteracy:0 "Illiteracy"
+GUA_illiteracy:0 "문맹"
 GUA_illiteracy_desc:0 "Illiteracy has deeply affected Guatemala. While at the start of Orellana's regime the illiteracy rate was at 96%, the number has dropped down to 75%, mainly due to the reforms initiated in the country. However, this is still a problem, and it will likely haunt us until severe reforms are made."
 
-GUA_illiteracy_2:0 "Illiteracy"
+GUA_illiteracy_2:0 "문맹"
 GUA_illiteracy_2_desc:0 "Illiteracy has deeply affected Guatemala. While at the start of Orellana's regime the illiteracy rate was at 96%, the number has dropped down to 75%, mainly due to the reforms initiated in the country. However, this is still a problem, and it will likely haunt us until severe reforms are made."
 
-GUA_illiteracy_3:0 "Illiteracy"
+GUA_illiteracy_3:0 "문맹"
 GUA_illiteracy_3_desc:0 "Illiteracy has deeply affected Guatemala. While at the start of Orellana's regime the illiteracy rate was at 96%, the number has dropped down to 75%, mainly due to the reforms initiated in the country. However, this is still a problem, and it will likely haunt us until severe reforms are made."
 
 GUA_compensated_illiteracy:0 "Compensated Illiteracy"
 GUA_compensated_illiteracy_desc:0 "After many educational reforms, heavy investments, and even resorting to inviting foreign intellectuals to work in Guatemala, Orellana managed to bring down our crippling illiteracy to manageable levels."
 
-GUA_BM:0 "Black Monday"
+GUA_BM:0 "검은 월요일"
 GUA_BM_desc:0 "While Black Monday did not affect us that badly, we still need to fill the holes in our economy that were formed in the wake of US companies leaving or downsizing."
 
 GUA_military_state:0 "Militarised State"
@@ -59,9 +61,9 @@ GUA_military_quality_production:0 "Specialised Production"
 
 GUA_more_guns_idea:0 "Streamlined Gun Production"
 
-GUA_more_men_idea:0 "The Spirit of Sacrifice"
+GUA_more_men_idea:0 "희생 정신"
 
-GUA_build_more_ideas:0 "Army Workers"
+GUA_build_more_ideas:0 "육군 노동자"
 
 GUA_more_fighters_idea:0 "Swarm the Skies"
 
@@ -73,9 +75,9 @@ GUA_eternal_president_idea:0 "El Presidente Eterno"
 
 GUA_orellana_loves_school:0 "Heavy Educational Investments"
 
-GUA_faster_building:0 "A True Guatemalan Industry"
+GUA_faster_building:0 "진정한 과테말라 산업"
 
-GUA_ubico_dictator:0 "Cult of Personality"
+GUA_ubico_dictator:0 "개성 추종"
 
 GUA_ubico_constitution:0 "The New Guatemalan Constitution"
 
