--- a/Kaiserreich Korean Translation/localisation/KR_Libya_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Libya_l_english.yml
@@ -183,25 +183,9 @@ LBA_gunimports_desc:0 "Guns are being imported, and we are making sure that our 
 libya.1.t:0 "The Kingdom of Tripolitania"
 libya.1.d:0 "The modern-day monarchy of Tripolitania was founded by the Senussi Order after the Weltkrieg with the support and protection of the Ottoman Empire. When Ahmed Sharif's forces were defeated in the early Libyan front of the Weltkireg, Idris, his cousin, took the helm and carefully manouvered the Order to successfully survive the conflict. When Italy was dissolved in 1919, the existing rebel state of the Republic of Tripolitania was incoporated under the authority of the Order, and the Kingdom of Tripolitania was born, with its authority extending through Fezzen and Cyrenaica. The Ottomans, wary of losing regional influence, installed Ahmed Sharif as King of Tripoli, and Idris was forced into exile in Egypt. The Ottoman influence in Tripolitania was recognised by the Peace with Honour, as were its borders with British Egypt. In the years since then, Tripolitania has enjoyed peace and calm; save of course for the fact that the Senoussi had to quash a few Republican radicals in late 1919. Ottoman rule is barely felt in any distinguishable way, and the order that the Kingdom brought has been beneficial for its small economy. As long as no significant shakeups happen to our status quo, little upheaval will befall Tripolitania."
 libya.1.a:0 "Onwards!"
-libya.2.t:0 "Waddai Requests Aid"
-libya.2.d:0 "The fledgling Waddai rebels beg for our aid! They will be overrun by invaders in weeks if we do not act."
-libya.2.a:0 "Of course!"
-libya.2.b:0 "We have bigger concerns..."
-libya.3.t:0 "Tripolitania Agrees!"
-libya.3.d:0 ""
-libya.3.a:0 "Huzzah"
-libya.4.t:0 "Tripolitania Refuses!"
-libya.4.d:0 ""
-libya.4.a:0 "Dark Tidings..."
-libya.5.t:0 ""
-libya.5.d:0 ""
-libya.5.a:0 ""
-libya.6.t:0 ""
-libya.6.d:0 ""
-libya.6.a:0 ""
-libya.7.t:0 ""
-libya.7.d:0 ""
-libya.7.a:0 ""
+
+# Removed the Waddai related stuff as it isn't triggered nor has loc
+
 libya.8.t:0 "Libya Rises!"
 libya.8.d:0 "As we remove the Ottoman Yoke, we no longer need to abide by the servile name of the vilayet of old. Our state will be forever known as the Kingdom of Libya, named after the ancient Roman province, and our great history starts today!"
 libya.8.a:0 "We are a nation that knows no surrender, we win or we die!"
@@ -255,7 +239,7 @@ libya.24.t:0 "Ifriqya's Capital"
 libya.24.d:0 "As our nation is reborn from foreign oppression, Tunisian and Libyan leaders have been hotly discussing the location of our capital. Three options are available: the old capital of Al Quawiran, Tunis, or Tripoli."
 libya.24.a:0 "The seat of Ancient Carthage, Tunis, will again be the capital of Africa."
 libya.24.b:0 "Between the two, Al Quawiran will be the seat of our unity government."
-libya.24.c:0 "Tripoli remains the beating heart of Africa"
+libya.24.c:0 "Tripoli remains the beating heart of Africa."
 libya.25.t:0 "Tunisia Tensions Decrease"
 libya.25.d:0 "After years of rule, Tunisia has grown more and more used to its freedom as a part of Ifriqya. Slowly the removal of French invading institutions and eradication of rebel movements has made our progress towards a united Africa for Africans far more tangible."
 libya.25.a:0 "Good!"
@@ -278,4 +262,3 @@ libya.30.a:0 "Huzzah!"
 libya.31.t:0 "Egypt Accepts!"
 libya.31.d:0 "It appears that the Egyptians wisely chose to amend the atrociously ugly border at Kufrah in our favour, forever promising to make our nation both larger and more aesthetically pleasing."
 libya.31.a:0 "Thank goodness!"
-
