--- a/Kaiserreich Korean Translation/localisation/KR_Mexico_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mexico_l_english.yml
@@ -71,8 +71,8 @@ MEX_yucatan_war_tooltip:0 "유카탄이 반란을 일으켰다"
 NIC_volunteers_tooltip:0 "우리는 니카라과로 자원병을 보낼 것이다"
 NIC_volunteers_tooltip2:0 "멕시코의 자원병이 우리의 투쟁을 돕기 위해 도착했다"
 200_infantry_equipment_1:0 "£rifle_texticon §H200§!"
-200_infantry_equipment_1_blocked: "£rifle_texticon §R200§!"
-200_infantry_equipment_1_tooltip: "우리가 그들에게 보낼 수 있을 만큼 충분한 총이 필요할 것입니다"
+200_infantry_equipment_1_blocked:0 "£rifle_texticon §R200§!"
+200_infantry_equipment_1_tooltip:0 "우리가 그들에게 보낼 수 있을 만큼 충분한 총이 필요할 것입니다"
 
 MEX_campesinos_subtract_1:0 "§R농민§!의 세력은 §Y1§만큼 낮아질 것이다!"
 MEX_campesinos_subtract_2:0 "§R농민§!의 세력은 §Y2§만큼 낮아질 것이다!"
@@ -781,8 +781,8 @@ mexico.50.a:0 "우리는 이 반란군들을 파괴할 것이다"
 
 mexico.51.t:0 "농민 전쟁 - 과달라하라 전투"
 mexico.51.d:0 "멕시코 군대는 과달라하라 시를 점령하려는 판초 비야에 의해 소위 해방군 지도자와 마주하고 있습니다. 페드로 오제다 멕시코 군 사령관은 이 도시를 방어하기 위해 준비하고 있지만, 그는 결과가 어떻든 간에 이번 전투는 피비린내 나는 전투가 될 것이라고 우려하고 있습니다. 피와 먼지가 가라앉고, 승자는..."
-mexico.51.a:0 "자유의 농민군."
-mexico.51.b:0 "멕시코 군대."
+mexico.51.a:0 "멕시코 군대."
+mexico.51.b:0 "자유의 농민군."
 
 mexico.52.t:0 "농민 전쟁 - 셀라야 전투"
 mexico.52.d:0 "멕시코 군대는 농민군이 주둔하고 있는 셀라야 마을 근처에서 농민군과 대치하고 있습니다. 이 공격을 지휘하는 멕시코 군 사령관인 헤수스 페레이라는 그들을 쫓아낼 수 있다고 믿지만 그는 또한 그것이 피비린내 나는 전투가 될 것이라는 것을 알고 있습니다. 결과는..."
