--- a/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
@@ -30,11 +30,50 @@ sau_rebuild:0 "우리의 주권을 존중함"
 SAU_JBSKILL:0 "이 국가 중점은 §Y자발 샴마르§!가 없을 시 건너 뜁니다"
 SAU_saudi_victory:0 "자발 샴마르가 패배했습니다"
 IKH_revolt:0 "이크완이 진압되었습니다"
-SAU_develop_suryah_tt:0 "§Y레반트§!를 통제하고 있을 시, §Y2 민간 공장§!을 추가합니다"
-SAU_develop_fringe_arabia_tt:0 "§Y예멘§!을 통제하고 있을 시, §Y2 민간 공장§!을 추가합니다"
-SAU_develop_iraq_i_arab_tt:0 "§Y이라크§!을 통제하고 있을 시, §Y2 민간 공장§!을 추가합니다"
-SAU_develop_kuwait_tt:0 "§Y쿠웨이트§!를 통제하고 있을 시, §Y1 해군 조선소§!를 추가합니다"
 SAU_ikhwan_provoking:0 "§R국가 현대화 작업으로 인해 이크완이 반란을 일으킬 것입니다.§!"
+
+sau_al_hasa_cut_off:0 "\n§gThis will prevent the §MRashidis§! from reinforcing their positions in the §YTrucial States§!, §YQatar§! and §YBahrain§!.§!"
+sau_already_boosting_support:0 "Already influencing another Emirate"
+UAE_stopped:0 "Rashidis blocked our advances in the Trucial States"
+Qatar_stopped:0 "Rashidis blocked our advances in Qatar"
+Bahrain_stopped:0 "Rashidis blocked our advances in Bahrain"
+Al_Hasa_stopped:0 "Rashidis blocked our advances in Al-Hasa"
+Arabian_Desert_stopped:0 "Rashidis blocked our advances in the Arabian desert"
+
+### Decisions ###
+SAU_JBS_Power_Struggle:0 "Preparations for the War of Unification"
+SAU_JBS_Power_Struggle_desc:0 "For years we have waited for the opportunity to unite the Arabian peninsula under the House of Saud. Sadly the Ottoman watchdogs did not sleep with both eyes closed and when the British Empire fell in 1925, they more than rewarded their Rashidi lapdogs for their "loyalty" during the Weltkrieg. As we were left with nothing, devoid of allies and territorial gains, Abdulaziz grew ever more restless and vengeful.\n\nSaud bin Abd Al-Aziz may be enjoying the support of his Ottoman allies but dark clouds are gathering on the horizon and should his powerful benefactor find himself occupied in internal matters, his pathethic armies will have the face the Ikhwans rage all on their own..." 
+
+
+SAU_Influence_UAE:0 "Push for control over the Trucial States"
+
+SAU_Influence_Qatar:0 "Push for control over Qatar"
+
+SAU_Influence_Bahrain:0 "Influence Bahrain"
+
+SAU_Contest_Al_Hasa:0 "Contest the Al-Hasa coastal strip"
+
+SAU_Contest_Al_Hasa_Mission:0 "Battle of Al-Hasa"
+
+SAU_Escalate_Al_Hasa:0 "Invest further resources in the Al-Hasa conflict"
+
+SAU_Contest_Arabian_Desert:0 "Skirmish against the Rashidis"
+
+SAU_War_of_Unification:0 "Arabian War of Unification"
+SAU_War_of_Unification_desc:0 "The Final Struggle for control over the Arab interior is rapidly approaching as the Ottoman behemoth is crackling under the weight of the worldwide economic depression, temporarily unable to maintain peace on the peninsula. All Emirs will have to pick a side for the future of the Arab world will be written in blood and the losers will find themselves disgraced, cast aside or slain on the field of battle."
+
+SAU_Ikhwan_Rides_Out:0 "The Ikhwan rides out"
+SAU_Ikhwan_Rides_Out_desc:0 "The Ikhwan or 'The Brethren' is a tribal militia used by Ibn Saud as a key element within our army. Zealous religious warriors, they are not bound by loyalty to Ibn Saud but by allegiance to the strict morals of Islamic society. Renouncing all Western advances, the Ikwhan wish to purify the Islamic world of its decadence and unite all muslims in a single unitary state.\n\nNonetheless they are an unruly and barbaric force, slitting the throats of all male prisoners they encounter and fighting with swords and lances. This makes them a worthy asset however to Ibn Saud as their zealously and bloodthirstiness is used in their infamous raids on the territories of our neighbours."
+
+SAU_Ikwhan_Qatar:0 "Raid Qatar"
+SAU_Ikwhan_Muscat:0 "Raid Muscat"
+SAU_Ikwhan_UAE:0 "Raid the Trucial States"
+SAU_Ikwhan_Asir:0 "Raid Asir"
+SAU_Ikwhan_Hejaz:0 "Raid the Hejaz"
+SAU_Ikwhan_Basra:0 "Raid Basra"
+SAU_Ikwhan_Baghdad:0 "Raid Baghdad"
+SAU_Ikwhan_Damascus:0 "Raid Damascus"
+SAU_Ikwhan_Medina:0 "Raid Medina"
 
 ### Ideas ###
 SAU_ikh_aftermatch:0 "살라프파의 불만"
@@ -82,7 +121,7 @@ SAU_hit_egypt:0 "이집트 타격"
 SAU_hit_libya:0 "리비아 타격"
 SAU_asir_desc:0 "그들이 가련한 토지를 유지할 힘이 없다면, 온 힘을 다해 예멘에 완전한 타격을 가할 수 있습니다. 남부 아라비아는 우리 땅이 될 것입니다!"
 SAU_hit_oman_desc:0 "수십년 전에 시작했던 사업을 끝마칠 때가 되었습니다. 지금 우리는 멍청한 무스카트의 술탄을 영구히 축출해낼 수 있는 힘을 지니고 있습니다."
-SAU_hit_egypt_desc:0 "너무 오랫동안 파라오가 되고자 하는 배교자와 거의 유사한 열망이 신실한 자들을 오도해 왔습니다. 이제, 모든 아랍 민족을 우리의 정당한 지배 아래 통합해야 합니다!"
+SAU_hit_egypt_desc:0 "너무 오랫동안 이집트인이 되고자 하는 배교자와 거의 유사한 열망이 신실한 자들을 오도해 왔습니다. 이제, 모든 아랍 민족을 우리의 정당한 지배 아래 통합해야 합니다!"
 SAU_hit_libya_desc:0 "이제 우리는 아직 지배해본 적 없는 서방에 다다랐습니다. 옛 칼리프처럼 대서양을 바라보며 서방 괴뢰국에게 지배받고 있는 모든 아랍인을 해방해낼 것입니다"
 
 
@@ -108,8 +147,8 @@ SAU_purge_rashidi:0 "라시드 정화"
 SAU_purge_rashidi_desc:0 "라시드 가문의 생존자는 우리 영토와 해외 곳곳에 숨어있습니다. 우리 가문의 지배권을 진실로 공고히 하는 한편으로 미약한 라시드 가문의 과대 망상을 종식시키는 유일한 길은 라시드 가문을 결정적으로 멸문시키는 것 뿐입니다"
 SAU_purge_ikhwan:0 "이카완 정화"
 SAU_purge_ikhwan_desc:0 "이크완은 자격없는 지배자가 씌운 멍에로부터 아라비아를 해방하라는 임무를 성공적으로 끝마쳤지만, 감히 아직도 자신들을 지원했던 물주에게 반란을 획책하고 있습니다. 근엄한 아버지와 같이, 우리는 사우드 가문이 유일한 절대 권력을 행사하는 아라비아의 새로운 권력 구조를 이해하지 못하는 이들을 혼내주어야 합니다"
-SAU_dealing_with_kuwait:0 "쿠웨이트와 거래"
-SAU_dealing_with_kuwait_desc:0 "사바 가문은 오랜 세월동안 스스로의 일을 결정할 수 있는 자치권을 갈망하였습니다. 만약 그들이 자치를 원한다면 전략적 요충지에 있는 건물들을 포함한 아라비아 만 전역에 있는 자산을 우리에게 넘겨 주어야 합니다"
+SAU_dealing_with_kuwait:0 "Dealing with the Trucial States"
+SAU_dealing_with_kuwait_desc:0 "The Emirs of the Trucial States have long cowered behind the might of Britain and the Ottoman Empire. Now this so called protection is at an end and they will serve their new nation."
 SAU_consolidating_realm:0 "소왕국 통합"
 SAU_consolidating_realm_desc:0 "우리의 동맹 부족들을 소집하여 그들 앞에서 저희 아미르께서 유일하게 높으신 아라비아의 지배자임을 주장하여 확신시켜야 합니다. 물론 실상은 약간 어려움이 따르긴 합니다만, 대업을 완수할때까지는 계속하여 노력해야 합니다"
 SAU_saudi_legal_code:0 "사우디 법전"
@@ -214,18 +253,18 @@ SAU_contest_the_gulf:0 "Contest the Gulf"
 SAU_contest_the_gulf_desc:0 "Many would call it the 'Persian' Gulf. But we know better, and we will make sure the world does too!"
 SAU_protect_oil_shipping:0 "Protect Oil Shipping"
 SAU_protect_oil_shipping_desc:0 "Our oil exports are a very vital part of our economy, and our enemies know this. To ensure that the shipments safely reach the Indian Ocean, a proper oceangoing navy will be needed, and the crews to maintain it"
-SAU_kuwait_naval_base:0 "쿠웨이트 해군 기지"
-SAU_kuwait_naval_base_desc:0 "Once an stronghold for the house of Al Sabah, Kuwait will now be properly refitted to be our main port for the foreseeable future"
+SAU_kuwait_naval_base:0 "Al-Hasa Naval Base"
+SAU_kuwait_naval_base_desc:0 "Once part of the Ottoman Basra Vilayet, Al-Hasa will now be properly refitted to be our main port for the foreseeable future."
 SAU_naval_exercises:0 "해군 훈련"
 SAU_naval_exercises_desc:0 "As we prepare for confrontation with [PER.GetNameDef] and other hostile powers in the Arabian Gulf, we will conduct navy exercises to ensure our fleet has actual experience at sea when conflict flares up"
 SAU_liberation_war_of_holy_cities:0 "성지 해방"
-SAU_liberation_war_of_holy_cities_desc:0 ""
+SAU_liberation_war_of_holy_cities_desc:0 "The holy cities of Mecca and Medina are held in bondage by the Ottoman Turks. It is our holy duty to liberate these holy cities under our banner."
 SAU_mobilize_the_tribes:0 "부족들을 징집하라"
 SAU_mobilize_the_tribes_desc:0 "Every tribe in these lands has sworn to help us, and now we are at war with foes which wish to undo all we have fought for so long. Fulfil your oaths! Come to us, for your Emir calls for aid!"
 SAU_army_command_modernization:0 "지휘 체계 현대화"
 SAU_army_command_modernization_desc:0 "It's high time we modernise the way our army is led, away from the lords and into the Army, which will be properly organised following foreign military doctrine, with different branches for different types of units and theatres"
 SAU_establish_arabian_airforce:0 "아라비아 공군 창설"
-SAU_establish_arabian_airforce_desc:0 ""
+SAU_establish_arabian_airforce_desc:0 "We should look into establishing the first ever Arabian air-force and rule the skies above the desert dunes."
 SAU_establish_arabian_mechanized_brigades:0 "기계화 부대 창설"
 SAU_establish_arabian_mechanized_brigades_desc:0 "In this new age, we must ensure our capacity to adapt is as present as our bravery and integrity. Mechanised and Motorised infantry forces will play a grand part in our reconquest of the homeland!"
 SAU_establish_new_arabian_army:0 "새로운 아라비아 군대"
@@ -242,19 +281,16 @@ SAU_war_of_resistance_desc:0 "We live in an age of total war, where even limited
 
 
 saud.1.t:0 "네지드 에미르국"
-saud.1.d:0 "벨트크리그는 사우드 가문이 이 땅을 지배할 운명이라는 사실을 보여주는 수많은 징조들 중 하나였습니다. 하심 가문이 최고로 자만에 빠져 있는 동안 그들은 자신을 조종하는 이교도 조종자에게 버림받았고, 투르크인과 그 조종자에게 죽도록 내버려졌습니다. 전쟁에 개입하지 않았던 것은 오스만의 보복을 피하기 위한 신의 한 수였던 것으로 밝혀졌고 지금 퇴폐적인 투르크인들은 우리에게 실질적인 지배력을 행사하지 못하고 있습니다. 카타르와 트루셜 코스트는 순전히 우리의 힘만으로 정복하였습니다. 이제 우리는 호기를 기다리면서 하심 가문 전사들과 오스만 정부 양쪽 모두에 입에 발린 말을 던지는 라시드 가문을 분쇄하기 위한 전사와 자금, 그리고 전문 지식을 모으고 있습니다. 결국은 우리 깃발 아래 아라비아를 하나로 통일할 것입니다!"
+saud.1.d:0 "벨트크리그는 사우드 가문이 이 땅을 지배할 운명이라는 사실을 보여주는 수많은 징조들 중 하나였습니다. 하심 가문이 최고로 자만에 빠져 있는 동안 그들은 자신을 조종하는 이교도 조종자에게 버림받았고, 투르크인과 그 조종자에게 죽도록 내버려졌습니다. 전쟁에 개입하지 않았던 것은 오스만의 보복을 피하기 위한 신의 한 수였던 것으로 밝혀졌고 지금 퇴폐적인 투르크인들은 우리에게 실질적인 지배력을 행사하지 못하고 있습니다. 이제 우리는 호기를 기다리면서 하심 가문 전사들과 오스만 정부 양쪽 모두에 입에 발린 말을 던지는 라시드 가문을 분쇄하기 위한 전사와 자금, 그리고 전문 지식을 모으고 있습니다. 결국은 우리 깃발 아래 아라비아를 하나로 통일할 것입니다!"
 saud.1.a:0 "사우드 왕가 만세!"
-
-
 
 saud.3.t:0 "사우디 아라비아"
 saud.3.d:0 "오늘 우리는 라시드 가문에 승리를 거두었고, 사우디 가문은 유일한 권력으로 올라섰습니다. 이 승리와 함께 온 아라비아를 지배할 것입니다!"
 saud.3.a:0 "사우드 왕가 만세!"
+
 saud.2.t:0 "술탄께서는 칼리프국과 성지에 대한 통치권을 주장하셨습니다!"
 saud.2.d:0 "In a solemn and sacred ceremony the Saudi Sultan of Arabia has declared that he is the new Caliph of Islam. A new an pious dynasty will lead and guide the faithful once more."
 saud.2.a:0 "칼리프 만세!"
-
-
 
 ### Reactions to the Caliph Event ###
 
@@ -359,7 +395,33 @@ saud.55.t:0 "독일이 판매를 결정하다"
 saud.55.d:0 "베를린에서는 계약 조건을 받아들이기로 결정하였고 다가올 전장에서 우리를 지원하기 위해 처음으로 무기를 아라비아로 운송하였습니다. 이 계약이 정부에게 비싼 도박이었을지라도, 장기적으로 상환해나갈 것입니다."
 saud.55.a:0 "이 무기들이 라시드 가문 쓰레기들을 전멸시킬 것이다!"
 
+### SAU-JBS Power Struggle ###
+saud.56.t:0 "Trucial States fall to Ibn Saud"
+saud.56.d:0 "Reports have reached us that the Emirs of the Trucial States have succumbed to the advances of Ibn Saud. This sign of weakness is spreading to the other Emirs in the Rashidi alliance and cracks are already forming. Day by day, the power of our Emir is growing."
+saud.56.a:0 "Another great victory!"
+
+saud.57.t:0 "Qatar falls to Ibn Saud"
+saud.57.d:0 "Reports have reached us that the Emir of Qatar has succumbed to the advances of Ibn Saud. This sign of weakness is spreading to the other Emirs in the Rashidi alliance and cracks are already forming. Day by day, the power of our Emir is growing."
+saud.57.a:0 "Another great victory!"
+
+saud.58.t:0 "Bahrain falls to Ibn Saud"
+saud.58.d:0 "Reports have reached us that the Emir of Bahrain has succumbed to the advances of Ibn Saud. This sign of weakness is spreading to the other Emirs in the Rashidi alliance and cracks are already forming. Day by day, the power of our Emir is growing."
+saud.58.a:0 "Another great victory!"
+
+saud.59.t:0 "Al-Hasa falls to Ibn Saud"
+saud.59.d:0 "Reports have reached us that the Rashidis have been driven out of the Al-Hasa coast. This sign of weakness is spreading to the other Emirs in the Rashidi alliance and cracks are already forming. Day by day, the power of our Emir is growing."
+saud.59.a:0 "Another great victory!"
+
+
 ### Events ###
 saud.150.t:0 "이크완 반란!"
 saud.150.d:0 "이크완은 아라비아에서 수십년간 강력한 군사 집단으로 존재해왔습니다. 또한 이들은 우리가 다른 아랍 국가들을 물리치고 사우드 가문이 이 지역에서 지배권을 행사하는데에 큰 영향을 주었습니다. 하지만 이크완은 항상 신앙심이 깊은 전통을 고수하는 집단이기 때문에 변화와 개혁을 격렬하게 반대해왔습니다. 그들은 국가를 지배하는데에 있어서 현대화가 필요하다는 사실을 깨닫지 못한 것 처럼 보입니다. 평소에 우리는 더이상 현대화하려는 노력을 하지 않겠다는 약속으로 이크완의 분노를 잠재워왔습니다. 하지만 지금 우리가 그들을 너무 심하게 몰아세운 것 처럼 보입니다. 이크완 병사들은 사우드 가문이 아라비아를 다스리는데 부적합하다고 선언한 이크완 사령관 파이살 알 두와시의 통솔력 아래에서 결속되어있습니다. 수많은 이크완 민병이 궐기하였고, 싸움은 이미 시작되었습니다..."
 saud.150.a:0 "반란군을 쳐부술 것이다, 아라비아를 위하여!"
+
+saud.151.t:0 "Emirs swear loyalty to the Saudi state"
+saud.151.d:0 "The tent city of Riyadh saw the procession of sabers upon many soldeirs heads under Ibn Saud's orders. In it's wake is the procession of captured Emirs. The first, including the Rashidis, Hashimite, Al Thani and Howietat were deemed too rebellious to be loyal vassals to Nejd. The latter, including the Al Nahyan and the Gadban of the Bani Lam, were more useful. Ibn Saud has decided to spare the families of the Emirs on the condition that they swear total alligence to the Saudi Arabia. This new form of vassalage is different from the ruthless precedence Ibn Saud's forefathers operated on, and are protected from the Ikhwan in perpetuity. "
+saud.151.a:0 "Sufficient is Allah as our ally"
+
+saud.152.t:0 "Ikhwan Revolt Defeated"
+saud.152.d:0 "The Ikhwan have finally been defeated, and the last of their soldiers are currently being rounded up."
+said.152.a:0 "Good riddance!"
